fixed the play again button style fixed number text to be aligned in minefield cells updated look of difficulty selector added a propr functionality to calculate winning game score

--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ button {
 }
 
 .play-button-static {
-    height: 60px;
-    width: 90px;
+    height: 70px;
+    width: 100px;
     background-image: url("../images/play_button_red.png");
 }
