--- a/css/style_main_game_page.css
+++ b/css/style_main_game_page.css
@@ -24,6 +24,8 @@
     flex: 1;
     justify-content: space-evenly;
     align-items: center;
+    max-height: 60px;
+    margin-top: 10px;
 }
 
 .game-bar-item {
@@ -43,24 +45,18 @@
 }
 
 .menu-button-animated {
+    height: 70px;
+    width: 100px;
     background-image: url("../images/arrow.gif");
 }
 
 .menu-button-static {
+    height: 60px;
+    width: 90px;
     background-image: url("../images/arrow.png");
 }
 
 #time-text {}
-
-
-
-#new-game-button {
-    background-image: url("../images/new_game.png");
-    width: 100px;
-    height: 70px;
-    font-family: 'pixel';
-    font-size: 1em;
-}
 
 /* Minesweeper game */
 
@@ -74,8 +70,6 @@
 }
 
 #play-again-button {
-    height: 10vh;
-    width: 15vh;
 }
 
 #win-lose-section {
@@ -107,6 +101,7 @@
     flex-direction: column;
     width: fit-content;
     height: fit-content;
+    user-select: none;
 }
 
 /* A mine row holding mine containers along that row */
@@ -116,13 +111,16 @@
 }
 
 .cell {
+    display: flex;
     flex: 1;
     background-size: cover;
     height: 30px;
     max-width: 30px;
     min-width: 30px;
     width: 30px;
-    text-align:center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .bomb {
